testsuite/escript/classes/fail-scopes-var-as-funcref.err
fail-scopes-var-as-funcref.src:12:1: error: User function 'Animal' not found